--- a/src/@components/SobreNos/SobreNos.css
+++ b/src/@components/SobreNos/SobreNos.css
@@ -1,4 +1,4 @@
-.container > p{
+.container > h2{
     margin: 0 auto;
     text-align: center;
     font-size: 38px;
@@ -12,12 +12,11 @@
 
 .info{
     background-color: var(--color-light);
-    min-width: 30%;
     margin-bottom: 1rem;
 }
 
 .conteudo-info{
-    margin: 24px 24px;
+    padding: 24px;
 }
 
 .conteudo-info h5{
@@ -26,7 +25,7 @@
     font-weight: 500;
     color: var(--color-dark);
 }
-.conteudo-info p{
+.conteudo-info > p{
     font-size: 16px;
     line-height: 28px;
     font-weight: 400;
@@ -38,39 +37,10 @@
     width: 40px;
     height: 40px;
     text-align: center;
-    margin-bottom: 1rem;
-}
-
-.numero-conteudo img{
-    height: 100%;
-    width: 100%;
-    z-index: 0;
-}
-
-.numero-conteudo p{
     font-size: 20px;
     font-weight: 700;
-    line-height: 30px;
-    letter-spacing: 0.005em;
-    position: relative;
-    bottom: 35px;
+    line-height: normal;
+    text-align: center;
+    background-image: url(./Maskgroup.png);
     color: var(--color-white);
-    opacity: 1;
-}
-@media (max-width:991px){
-    .conteudo-info h5{
-        font-size: 15px;
-        line-height: 30px;
-    }
-    .conteudo-info p{
-        font-size: 13px;
-        line-height: 20px;
-    }
-         
-}
-@media (max-width: 768px) {
-    .info{
-        max-width: 90%;
-        min-height: auto;
-    }
 }
