--- a/src/@components/SobreNos/SobreNos.css
+++ b/src/@components/SobreNos/SobreNos.css
@@ -10,12 +10,9 @@
     padding-bottom: 2rem;
 }
 
-.info{
-    background-color: var(--color-light);
-    margin-bottom: 1rem;
-}
-
 .conteudo-info{
+    background-color: var(--color-light);
+    margin-bottom: 40px;
     padding: 24px;
 }
 
@@ -40,7 +37,7 @@
     font-size: 20px;
     font-weight: 700;
     line-height: normal;
-    text-align: center;
     background-image: url(./Maskgroup.png);
     color: var(--color-white);
+    padding-top: 8px;
 }
