Classe do Breadcrumb mudada para Bradcrumb-tm

--- a/src/@components/Home/Parceiros/Parceiros.css
+++ b/src/@components/Home/Parceiros/Parceiros.css
@@ -1,11 +1,7 @@
-.Logos_Parceiros {
+.logos-parceiros {
 	background-color: var(--color-light);
 }
 
-a img {
-	height: auto;
-	width: auto;
-}
 @keyframes animacao {
 	0% {
 		bottom: 0px;
@@ -14,8 +10,9 @@ a img {
 		bottom: 4px;
 	}
 }
-a img:hover {
+.logos-parceiros a img:hover {
 	position: relative;
 	animation-name: animacao;
-	animation-duration: 1s;
+	animation-duration: 600ms;
 }
+
