--- a/src/@components/Sobrenoscomponents/SobreNosHero/SobreNosHero.css
+++ b/src/@components/Sobrenoscomponents/SobreNosHero/SobreNosHero.css
@@ -2,12 +2,29 @@
     background-image: url(./HeroSobreNos.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-color: red;
     background-size: cover;
     width: 100%;
-    height: auto;
     margin: 0 auto;
+    position: relative;
+    padding: 300px 0 20px 0;
 }
-.hero-sobre-nos > h1{
-    margin-top: 0;
+
+.cover{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    background-color: black;
+    opacity: 0.3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.hero-sobre-nos-titulo{
+    z-index: 2;
+    position: relative;
+    color: var(--color-white);
+    font-weight: 600;
+    font-size: 42px;
 }
