--- a/src/@components/SobreNos/SobreNosHero/SobreNosHero.css
+++ b/src/@components/SobreNos/SobreNosHero/SobreNosHero.css
@@ -28,3 +28,8 @@
     font-weight: 600;
     font-size: 42px;
 }
+@media (max-width: 768px){
+    .hero-sobre-nos{
+        padding-top: 100px;
+    }
+}
