SobreNos-Conteudo Feito.

--- a/src/@components/SobreNos/SobreNosHero/SobreNosHero.css
+++ b/src/@components/SobreNos/SobreNosHero/SobreNosHero.css
@@ -1,5 +1,5 @@
 .hero-sobre-nos{
-    background-image: url(./HeroSobreNos.png);
+    background-image: url(/HeroSobreNos.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
