--- a/src/@components/Contato/Contato.css
+++ b/src/@components/Contato/Contato.css
@@ -1,13 +1,90 @@
-.contato-conteudo{
+.contato-conteudo {
     color: var(--color-dark);
     margin: 98px 0 86px 0;
-}
-.conteudo-texto{
+  }
+  
+  .conteudo-texto {
     font-size: 16px;
     opacity: 0.7;
     line-height: 27.2px;
     font-weight: 500;
-}
-.conteudo-texto b{
+  }
+  
+  .conteudo-texto b {
     font-weight: 700;
-}
+  }
+  
+  .form-contato {
+    height: auto;
+    background-color: var(--color-primary);
+  }
+  
+  .form-conteudo {
+    color: var(--color-white);
+    margin: 75px 101px 0 101px;
+  }
+  
+  .form-conteudo p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 48px;
+  }
+  
+  .custom-input {
+    opacity: 0.3;
+    border: solid 1.5px var(--color-white);
+    border-radius: 8px;
+    background-color: var(--color-primary);
+    padding: 10px;
+    width: 100%;
+    height: 64px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #f4f6fc; /* Texto visível */
+  }
+  
+  .custom-input:focus {
+    background-color: inherit;
+    outline: none;
+    opacity: 1;
+  }
+
+  .custom-input:invalid{
+    color: black;
+  }
+  
+  .custom-input::placeholder {
+    color: #f4f6fc;
+    opacity: 1;
+  }
+  
+  .botao-form {
+    width: 100%;
+    height: 64px;
+    color: var(--color-dark);
+    background-color: var(--color-secondary);
+    border-radius: 5px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 27px;
+    margin-top: 40px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .botao-form:hover {
+    background-color: var(--color-dark);
+    color: var(--color-white);
+  }
+  
+  @media (max-width: 768px) {
+    .form-conteudo {
+      margin: 75px 10% 0 10%;
+    }
+  }
+  
