--- a/src/@pages/CursosPage/CursosPage.css
+++ b/src/@pages/CursosPage/CursosPage.css
@@ -70,7 +70,7 @@
 
 .list-cursos .ant-pagination {
 	justify-content: center;
-	margin-top: 80px;
+	margin: 80px 0;
 }
 
 .list-cursos .ant-pagination .ant-pagination-item {
