--- a/src/@components/Header/Header.css
+++ b/src/@components/Header/Header.css
@@ -8,6 +8,7 @@
 }
 
 .navigation {
+	align-items: center;
 	display: flex;
 	justify-content: end;
 	gap: 20px;
@@ -22,6 +23,13 @@
 
 .navigation a:hover {
 	color: var(--color-secondary);
+}
+
+.navigation .button-default {
+	height: auto;
+	padding: 4px 16px;
+	font-weight: normal;
+	font-size: 14px;
 }
 
 .button-mobile {
@@ -41,4 +49,10 @@
 	color: var(--color-primary);
 	font-size: 18px;
 	text-decoration: none;
+}
+
+@media (max-width: 992px) {
+	.logo img {
+		height: 16px;
+	}
 }
